--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,7 @@
 {
   "name": "api",
   "version": "1.0.0",
+  "description": "Azure Function API for reservation analysis",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,10 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@azure/arm-compute": "^23.0.0",
     "@azure/arm-reservations": "^9.0.0",
-    "@azure/identity": "^4.11.1"
+    "@azure/identity": "^4.1.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
